--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ bin-debug/
 bin-release/
 [Oo]bj/
 [Bb]in/
+dist/
 
 # Other files and folders
 .settings/
@@ -12,6 +13,12 @@ bin-release/
 *.air
 *.ipa
 *.apk
+
+#node modules
+node_modules/
+
+#package json lock
+package-lock.json
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
